# real-estate-agent-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  prd_real_estate_agent_platform.md  skills-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_property_slug.py
backend/app/: main.py
backend/app/agents/: graph.py  llm.py  memory.py  state.py
backend/app/agents/nodes/: booking.py  handoff.py  property_search.py  qualification.py  rag.py
backend/app/api/v1/: appointments.py  auth.py  calculators.py  conversations.py  deps.py  health.py  leads.py  properties.py  router.py  webhooks.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  analytics_event.py  appointment.py  audit_log.py  base.py  conversation.py  document.py  eoi_submission.py  etl_job.py  fx_rate.py  guardrail_rule.py  lead.py  location.py  message.py  notification.py  notification_template.py  off_plan_project.py  property.py  saved_search.py  tenant.py  user.py
backend/app/repositories/: appointment.py  conversation.py  lead.py  property.py
backend/app/schemas/: appointment.py  auth.py  calculator.py  conversation.py  health.py  lead.py  property.py
backend/app/services/: crm.py  embedding.py  notification.py
backend/scripts/: seed.py
backend/tests/: test_health.py  test_properties.py
docs/: README.md
frontend/: .dockerignore  Dockerfile  package.json  vercel.json
graphify-out/: .graphify_chunk_01.json  GRAPH_REPORT.md  (+9 more)
(+51 files in other folders)
